--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header style="3background-color: #ffdab9;">
         <div class="profile-pic-container">
-            <img src="https://external-link-to-teddy-bears-background.jpg" alt="Remifalz's Profile Picture" class="profile-pic" id="profile-pic">
+            <img src="images/profile.jpg" alt="Remifalz's Profile Picture" class="profile-pic" id="profile-pic">
         </div>
         <h1 id="name">Remifalz</h1>
         <p id="intro">Backbencher | Memes Lover | Birthday: June 30, 2005</p>
